--- a/src/sass/layout/_side-panel.scss
+++ b/src/sass/layout/_side-panel.scss
@@ -19,9 +19,13 @@
 
   &__header {
     margin: 3.5rem 3rem 0 2.5rem;
-    line-height: .8;
+    line-height: 0.8;
     font-size: 3.2rem;
-    background-image: linear-gradient(to bottom right, var(--color-primary-light), var(--color-primary-dark));
+    background-image: linear-gradient(
+      to bottom right,
+      var(--color-primary-light),
+      var(--color-primary-dark)
+    );
     color: transparent;
     -webkit-background-clip: text;
     font-weight: 600;
@@ -67,7 +71,7 @@
 
       @media only screen and (max-width: $bp-largest) {
         font-size: 1.5rem;
-        gap: .7rem;
+        gap: 0.7rem;
       }
     }
 
@@ -81,7 +85,7 @@
       left: 99%;
 
       background-color: var(--color-primary);
-      transition: height .2s, left .25s .2s cubic-bezier(1, 0, 0, 1);
+      transition: height 0.2s, left 0.25s 0.2s cubic-bezier(1, 0, 0, 1);
       pointer-events: none;
     }
 
@@ -93,7 +97,7 @@
   }
 
   &__descr {
-    margin-left: .5rem;
+    margin-left: 0.5rem;
     color: var(--color-grey-dark);
     font-size: 1.6rem;
     padding-right: 5rem;
@@ -129,7 +133,7 @@
 
     @media only screen and (max-width: $bp-largest) {
       display: grid;
-      scale: .9;
+      scale: 0.9;
     }
 
     @media only screen and (max-width: $bp-largest) {
